--- a/index.html
+++ b/index.html
@@ -11,15 +11,41 @@
     <!-- Icons -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
-    <title>Saldur</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <title>Lubricantes Saldur</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #F4F4F1;">
+    <header>
+      <nav class="navbar navbar-expand-lg bg-white">
         <!-- Navbar content -->
-        <a class="navbar-brand" href="#">Lubricadora Saldur</a>
+      <div class='container'>
+        <a href="#"><span class = 'navbar-brand' >Lubricantes Saldur</span></a>
+        <ul class="nav">
+          <li class="nav-item">
+            <!--<a class="nav-link active " href="#">Active</a>-->
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fa fa-facebook facebook" href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fa fa-twitter twitter" href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fa fa-google google" href="#"></a>
+          </li>
+        </ul>
+  
+      </div>
+
     </nav>
+
+
+    </header>
+
+
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
@@ -28,3 +54,4 @@
 
   </body>
 </html>
+
