arreglado ubicacion de objetos en la barra de navegación

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
       <nav class="navbar navbar-expand-lg bg-white">
         <!-- Navbar content -->
       <div class='container'>
-        <a href="#"><span class = 'h1' >Lubricantes Saldur</span></a>
+        <a href="#"><span class = 'navbar-brand nbar' >Lubricantes Saldur</span></a>
         <ul class="nav">
-          
-          <li class="nav-item">
-            <a class="nav-link fa fa-facebook facebook" href="#"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fa fa-twitter twitter" href="#"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fa fa-google google" href="#"></a>
-          </li>
+            <li class="nav-item mespaciado">
+              <a class="nav-link fa fa-facebook facebook" href="#"></a>
+            </li>
+            <li class="nav-item mespaciado">
+              <a class="nav-link fa fa-twitter twitter" href="#"></a>
+            </li>
+            <li class="nav-item espaciado mespaciado">
+              <a class="nav-link fa fa-google google" href="#"></a>
+            </li>
+
           <!--Aquí comienza el menú desplegable en nav-->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown espaciado">
+          <a class="nav-link dropdown-toggle iespaciado" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
             Menu
           </a>
           <!--indexar sus partes aquí-->
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
             <a href='#' class="dropdown-item" href="#">Quienes Somos</a>
             <a  href='#' class="dropdown-item" href="#">Productos</a>
             <a href='#' class="dropdown-item" href="#">Noticias</a>
@@ -49,12 +49,12 @@
           </div>
         </li>
 
-        <li class="nav.item">
+        <li class="nav.item ">
           <div class="input-group">
             <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-search"></i></span>
+              <span class="input-group-text nencoger"><i class="fas fa-search"></i></span>
             </div>
-            <input type="text" class="form-control" placeholder="Búsqueda">
+            <input type="text" class="form-control nencoger nencoger1" placeholder="Búsqueda">
           </div>
         </li>
 
