cambio de personal.css a navbar.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Template\assets\css\personal.css">
+    <link rel="stylesheet" href="Template/assets/css/navbar.css">
+    <link rel="stylesheet" href="Template/assets/css/index.css">
+
  
     <title>Lubricantes Saldur</title>
   </head>
