correccion en noticias

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="Template/assets/css/owl.carousel.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Template/assets/css/navbar.css">
@@ -140,7 +140,7 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/popper.js/dist/popper.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="node_modules/bootstrap/dist/js/owl.carousel.min.js"></script>
+    <script src="Template/assets/js/owl.carousel.min.js"></script>
   </body>
 </html>
 
