--- a/index.html
+++ b/index.html
@@ -142,7 +142,39 @@
       </div>
     </section>
 
-
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h6 class="title">
+              <a href="src/views/dashboard.html">
+                Administrador
+              </a>
+            </h6>
+          </div>
+          <div class="col-md-3">
+            <ul class="nav">
+              <li class="nav-item">
+                <!-- <a></a> -->
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul class="nav">
+              <li class="nav-item">
+                <!-- <a></a> -->
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <div class="btn-wrapper profile">
+              <!-- <a></a> -->
+            </div>
+          </div>
+        </div>
+        <br>
+      </div>
+    </footer>
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
