correcion de boton

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="main-saldur">
         <div>
           <p class="txupbutton">DISTRIBUIDORA DE LUBRICANTES<br/>SALDUR</p>
-          <button class="descubrenos">Descúbrenos</button>
+          <button class="descubrenos" href="#presentacion">Descúbrenos</button>
         </div>
       </div>  
     </section>
