probando api de personajes de marvel

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a class="dropdown-item  colorLetra" href="#Noticias">Noticias</a>
             <a class="dropdown-item  colorLetra" href="src/views/Contactenos.html">Contáctenos</a>
             <a class="dropdown-item  colorLetra" href="src/views/geolocalizacion.html">Ubicación</a>
+            <a class="dropdown-item  colorLetra" href="src/views/Marvel.html">Api de Marvel</a>
           </div>
         </li>
 
@@ -147,9 +148,9 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="Template/assets/js/owl.carousel.min.js"></script>
 
-    <script>
+    <!-- <script>
       introJs().start();
-    </script>
+    </script> -->
 
   </body>
 </html>
